java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}


dependencies {

    implementation 'com.fasterxml.jackson.core:jackson-databind:2.16.2'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.16.2'
    implementation 'io.javalin:javalin:6.7.0'

    implementation 'com.github.docker-java:docker-java-core:3.4.1'
    implementation 'com.github.docker-java:docker-java-transport-httpclient5:3.4.1'
    implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'

    implementation 'com.auth0:java-jwt:4.4.0'
    implementation 'org.modelmapper:modelmapper:3.1.0'
    implementation project(":dto")

    
    implementation "com.github.Anuken.Arc:arc-core:$mindustryVersion"
    implementation "com.github.Anuken.Mindustry:core:$mindustryVersion"

    compileOnly 'org.projectlombok:lombok:1.18.30'

    annotationProcessor 'org.projectlombok:lombok:1.18.30'
}

configurations {
        compileOnly {
                extendsFrom annotationProcessor
        }
}
configurations.all {
        exclude group: 'commons-logging', module: 'commons-logging'
}
